--- a/ansible/loadbalancer.yml
+++ b/ansible/loadbalancer.yml
@@ -3,6 +3,15 @@
   become: true
   tasks:
 
+    - name: edit /etc/hosts
+      lineinfile:
+        path: /etc/hosts
+        state: present
+        line: "{{ item.ip }} {{ item.name }}"
+      with_items:
+        - { ip: 192.168.33.65, name: web1 }
+        - { ip: 192.168.33.66, name: web2 }
+
     - name: install nginx
       apt:
         name=nginx
@@ -14,6 +23,24 @@
         name=nginx
         state=started
         enabled=yes
+
+    - name: config nginx site
+      template:
+        src=templates/nginx.conf.j2
+        dest=/etc/nginx/sites-available/demo
+        mode=0644
+      notify: restart nginx
+
+    - name: de-activate default nginx site
+      file: path=/etc/nginx/sites-enabled/default state=absent
+      notify: restart nginx
+
+    - name: activate demo nginx site
+      file:
+        src=/etc/nginx/sites-available/demo
+        dest=/etc/nginx/sites-enabled/demo
+        state=link
+      notify: restart nginx
 
   handlers:
     - name: restart nginx
