--- a/ansible/database.yml
+++ b/ansible/database.yml
@@ -1,42 +1,8 @@
 ---
 - hosts: dbserver
   become: true
-  tasks:
-
-    - name: install dependencies
-      apt:
-        name=python-mysqldb
-        state=present
-        update_cache=yes
-
-    - name: install mysql-server
-      apt:
-        name=mysql-server
-        state=present
-        update_cache=yes
-
-    - name: mysql is running
-      service:
-        name=mysql
-        state=started
-        enabled=yes
-
-    - name: ensure mysql listen on all ports
-      lineinfile:
-        dest=/etc/mysql/my.cnf
-        regexp=^bind-address
-        line="bind-address = 0.0.0.0"
-      notify: restart mysql
-
-    - name: create demo database
-      mysql_db: name=demo state=present
-
-    - name: create demo user
-      mysql_user:
-        name=demo
-        password=demo
-        priv=demo.*:ALL host='%'
-        state=present
+  roles:
+    - mysql
 
   handlers:
     - name: restart mysql
