--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -8,6 +8,8 @@
   with_items:
     - { ip: 192.168.33.65, name: web1 }
     - { ip: 192.168.33.66, name: web2 }
+  tags:
+  - no-docker
 
 - name: install nginx
   apt:
